--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Mathieu Ravaux's Git Achievements</h2>
-Unlocked       16/      50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 124 points<br>
+Unlocked       16/      50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 133 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -39,6 +39,7 @@ Unlocked       16/      50 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Garage Inventor</div>  <div class="info">Used a custom alias for a Git command</div></li>
 <li><div class="title">Let there be light</div>  <div class="info">Commit without a parent.</div></li>
 <li><div class="title">Master Socialite (Level 7)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
+<li><div class="title">Master Socialite (Level 8)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Product Manager (Level 4)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
 <li><div class="title">Product Manager (Level 5)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
 <li><div class="title">Socialite (Level 4)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
@@ -51,35 +52,36 @@ Unlocked       16/      50 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-7895 rev-parse
-7835 symbolic-ref
- 313 status
- 195 push
- 130 diff
-  72 up
-  57 add
-  56 pull
-  46 Mer
-  38 st
-  38 remote
-  38 checkout
-  35 stash
+9334 rev-parse
+9261 symbolic-ref
+ 351 status
+ 256 push
+ 146 diff
+ 143 Mer
+  98 pull
+  84 up
+  68 add
+  65 Ven
+  42 st
+  40 remote
+  39 checkout
+  38 stash
+  17 Mar
   16 config
-  16 Mar
+  12 pul
+  11 rebase
+  11 commit
   11 Jeu
   10 init
-   8 commit
    7 clone
    6 submodule
    6 rm
-   6 rebase
    6 fetch
+   6 co
    6 branches
    6 achievements
+   6 Lun
    5 ci
-   4 co
-   4 Lun
-   3 pul
    3 log
    2 tag
    2 merge
@@ -91,7 +93,6 @@ Git commands sorted by usage:
    1 ignore
    1 gc
    1 blame
-   1 Ven
 </pre>
 <script type="text/javascript">
 function showLocked() {
