--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Mathieu Ravaux's Git Achievements</h2>
-Unlocked       18/      50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 150 points<br>
+Unlocked       18/      50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 153 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -22,6 +22,7 @@ Unlocked       18/      50 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Apprentice Banker (Level 2)</div>  <div class="info">Join two or more development histories together with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-merge.html">git-merge</a>.</div></li>
 <li><div class="title">Apprentice Blacksmith (Level 1)</div>  <div class="info">Created a branch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-checkout.html">git-checkout</a> -b.</div></li>
 <li><div class="title">Apprentice Cathedral Worker (Level 1)</div>  <div class="info">Cloned submodule repository and checked out commits specified by superproject.</div></li>
+<li><div class="title">Apprentice Cathedral Worker (Level 2)</div>  <div class="info">Cloned submodule repository and checked out commits specified by superproject.</div></li>
 <li><div class="title">Apprentice Chimney Sweeper (Level 1)</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-gc.html">git-gc</a> to run a number of housekeeping tasks on the current repository.</div></li>
 <li><div class="title">Apprentice Collector (Level 1)</div>  <div class="info">Fetches named heads or tags from another repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-fetch.html">git-fetch</a></div></li>
 <li><div class="title">Apprentice Collector (Level 2)</div>  <div class="info">Fetches named heads or tags from another repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-fetch.html">git-fetch</a></div></li>
@@ -57,50 +58,59 @@ Unlocked       18/      50 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-11620 rev-parse
-11469 symbolic-ref
- 371 status
- 311 push
- 157 Mer
- 148 diff
- 123 up
- 106 pull
-  75 add
-  65 Ven
-  64 stash
-  53 Mar
+14742 rev-parse
+14548 symbolic-ref
+ 438 status
+ 346 push
+ 160 Mer
+ 156 diff
+ 148 up
+ 115 pull
+ 103 Ven
+  83 add
+  82 stash
+  58 Mar
+  52 Jeu
+  47 checkout
+  46 st
   46 remote
-  44 st
-  44 checkout
-  22 config
-  16 Jeu
-  12 rebase
+  29 config
+  23 rm
+  19 co
+  13 rebase
+  13 commit
+  13 Lun
   12 pul
   11 fetch
-  11 commit
-  11 co
+  11 clone
   10 init
   10 branches
-   9 clone
-   9 Lun
    8 ls-files
-   6 submodule
-   6 rm
+   7 submodule
+   6 branch
    6 achievements
+   5 merge
    5 ci
-   3 merge
+   4 chore
    3 log
-   3 branch
+   3 contrib
+   3 Dim
    2 tag
    2 reflog
    2 instaweb
    2 gc
+   2 changelog
    2 Sam
+   1 undo
+   1 summary
    1 revert
    1 reset
    1 prune
    1 ignore
    1 help
+   1 feature
+   1 count
+   1 bug
    1 blame
 </pre>
 <script type="text/javascript">
