--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Mathieu Ravaux's Git Achievements</h2>
-Unlocked       18/      50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 153 points<br>
+Unlocked       18/      50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 156 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -39,6 +39,7 @@ Unlocked       18/      50 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Apprentice Socialite (Level 3)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Apprentice Stone Mason (Level 3)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Apprentice Web Designer (Level 1)</div>  <div class="info">Instantly browse your working repository in gitweb with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-instaweb.html">git-instaweb</a></div></li>
+<li><div class="title">Apprentice Web Designer (Level 2)</div>  <div class="info">Instantly browse your working repository in gitweb with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-instaweb.html">git-instaweb</a></div></li>
 <li><div class="title">Caretaker</div>  <div class="info">Added a .gitignore file to a repository.</div></li>
 <li><div class="title">Garage Inventor</div>  <div class="info">Used a custom alias for a Git command</div></li>
 <li><div class="title">Let there be light</div>  <div class="info">Commit without a parent.</div></li>
@@ -58,46 +59,46 @@ Unlocked       18/      50 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-14742 rev-parse
-14548 symbolic-ref
- 438 status
- 346 push
+15280 rev-parse
+15054 symbolic-ref
+ 455 status
+ 347 push
  160 Mer
- 156 diff
+ 157 diff
  148 up
  115 pull
  103 Ven
-  83 add
+  88 add
   82 stash
   58 Mar
   52 Jeu
+  48 st
+  47 remote
   47 checkout
-  46 st
-  46 remote
   29 config
-  23 rm
+  24 rm
   19 co
-  13 rebase
+  16 submodule
+  14 rebase
   13 commit
+  13 clone
   13 Lun
   12 pul
   11 fetch
-  11 clone
+  11 branches
   10 init
-  10 branches
    8 ls-files
-   7 submodule
+   6 merge
    6 branch
    6 achievements
-   5 merge
    5 ci
+   4 instaweb
    4 chore
    3 log
    3 contrib
    3 Dim
    2 tag
    2 reflog
-   2 instaweb
    2 gc
    2 changelog
    2 Sam
