--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Mathieu Ravaux's Git Achievements</h2>
-Unlocked       18/      50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 156 points<br>
+Unlocked       18/      50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 160 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -23,6 +23,7 @@ Unlocked       18/      50 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Apprentice Blacksmith (Level 1)</div>  <div class="info">Created a branch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-checkout.html">git-checkout</a> -b.</div></li>
 <li><div class="title">Apprentice Cathedral Worker (Level 1)</div>  <div class="info">Cloned submodule repository and checked out commits specified by superproject.</div></li>
 <li><div class="title">Apprentice Cathedral Worker (Level 2)</div>  <div class="info">Cloned submodule repository and checked out commits specified by superproject.</div></li>
+<li><div class="title">Apprentice Cathedral Worker (Level 3)</div>  <div class="info">Cloned submodule repository and checked out commits specified by superproject.</div></li>
 <li><div class="title">Apprentice Chimney Sweeper (Level 1)</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-gc.html">git-gc</a> to run a number of housekeeping tasks on the current repository.</div></li>
 <li><div class="title">Apprentice Collector (Level 1)</div>  <div class="info">Fetches named heads or tags from another repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-fetch.html">git-fetch</a></div></li>
 <li><div class="title">Apprentice Collector (Level 2)</div>  <div class="info">Fetches named heads or tags from another repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-fetch.html">git-fetch</a></div></li>
@@ -59,8 +60,8 @@ Unlocked       18/      50 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-15280 rev-parse
-15054 symbolic-ref
+15356 rev-parse
+15130 symbolic-ref
  455 status
  347 push
  160 Mer
@@ -78,7 +79,7 @@ Git commands sorted by usage:
   29 config
   24 rm
   19 co
-  16 submodule
+  18 submodule
   14 rebase
   13 commit
   13 clone
@@ -89,10 +90,10 @@ Git commands sorted by usage:
   10 init
    8 ls-files
    6 merge
+   6 instaweb
    6 branch
    6 achievements
    5 ci
-   4 instaweb
    4 chore
    3 log
    3 contrib
