--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Mathieu Ravaux's Git Achievements</h2>
-Unlocked       18/      50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 165 points<br>
+Unlocked       18/      50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 173 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -46,6 +46,7 @@ Unlocked       18/      50 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Let there be light</div>  <div class="info">Commit without a parent.</div></li>
 <li><div class="title">Master Socialite (Level 7)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Master Socialite (Level 8)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
+<li><div class="title">Master Stone Mason (Level 7)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Merchant (Level 4)</div>  <div class="info">Added an external repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-remote.html">git-remote</a> add.</div></li>
 <li><div class="title">Product Manager (Level 4)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
 <li><div class="title">Product Manager (Level 5)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
@@ -61,30 +62,32 @@ Unlocked       18/      50 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-16558 rev-parse
-16332 symbolic-ref
- 462 status
- 347 push
+18000 rev-parse
+17739 symbolic-ref
+ 484 status
+ 350 push
  160 Mer
  157 diff
- 149 up
+ 150 up
  115 pull
- 110 Ven
-  90 add
-  83 stash
+ 114 Ven
+ 106 add
+  87 Sam
+  84 stash
+  62 Jeu
+  61 Lun
   58 Mar
-  52 Jeu
+  53 st
+  53 remote
   51 checkout
-  50 st
-  50 remote
   31 config
   24 rm
+  22 submodule
   19 co
-  18 submodule
-  17 Lun
-  14 rebase
+  15 rebase
+  14 clone
   13 commit
-  13 clone
+  13 Dim
   12 pul
   12 branches
   11 fetch
@@ -98,12 +101,10 @@ Git commands sorted by usage:
    4 chore
    3 log
    3 contrib
-   3 Dim
    2 tag
    2 reflog
    2 gc
    2 changelog
-   2 Sam
    1 undo
    1 summary
    1 revert
