--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Mathieu Ravaux's Git Achievements</h2>
-Unlocked       19/      50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 183 points<br>
+Unlocked       19/      50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 188 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -43,6 +43,7 @@ Unlocked       19/      50 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Apprentice Web Designer (Level 1)</div>  <div class="info">Instantly browse your working repository in gitweb with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-instaweb.html">git-instaweb</a></div></li>
 <li><div class="title">Apprentice Web Designer (Level 2)</div>  <div class="info">Instantly browse your working repository in gitweb with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-instaweb.html">git-instaweb</a></div></li>
 <li><div class="title">Caretaker</div>  <div class="info">Added a .gitignore file to a repository.</div></li>
+<li><div class="title">Collector (Level 4)</div>  <div class="info">Fetches named heads or tags from another repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-fetch.html">git-fetch</a></div></li>
 <li><div class="title">Garage Inventor</div>  <div class="info">Used a custom alias for a Git command</div></li>
 <li><div class="title">Let there be light</div>  <div class="info">Commit without a parent.</div></li>
 <li><div class="title">Master Product Manager (Level 7)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
@@ -64,32 +65,32 @@ Unlocked       19/      50 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-23409 rev-parse
-22955 symbolic-ref
- 617 status
- 386 push
- 200 Mer
+24262 rev-parse
+23808 symbolic-ref
+ 631 status
+ 407 push
+ 215 Mer
  196 diff
- 178 up
- 137 add
- 133 Ven
- 128 stash
+ 186 up
+ 150 add
+ 144 stash
+ 140 Ven
  115 pull
  101 Jeu
   87 Sam
-  77 Lun
+  85 Lun
   71 remote
   69 Mar
   67 st
   54 checkout
   31 config
   25 rm
+  23 co
   22 submodule
   21 rebase
-  21 co
+  15 fetch
   15 clone
   15 branches
-  14 fetch
   14 commit
   13 Dim
   12 pul
@@ -97,17 +98,17 @@ Git commands sorted by usage:
    8 ls-files
    6 merge
    6 instaweb
+   6 ci
    6 branch
    6 achievements
-   5 ci
    4 chore
    3 log
    3 contrib
+   3 blame
    2 tag
    2 reflog
    2 gc
    2 changelog
-   2 blame
    1 undo
    1 summary
    1 revert
