--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Mathieu Ravaux's Git Achievements</h2>
-Unlocked       19/      50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 188 points<br>
+Unlocked       20/      50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 190 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -30,6 +30,7 @@ Unlocked       19/      50 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Apprentice Collector (Level 3)</div>  <div class="info">Fetches named heads or tags from another repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-fetch.html">git-fetch</a></div></li>
 <li><div class="title">Apprentice Historian (Level 1)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Apprentice Historian (Level 2)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
+<li><div class="title">Apprentice Hunter (Level 1)</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-bisect.html">git-bisect</a> to perform a binary search to find which change introduced a bug.</div></li>
 <li><div class="title">Apprentice Investigator (Level 1)</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-blame.html">git-blame</a> to annotate a file with information about how each line changed.</div></li>
 <li><div class="title">Apprentice Merchant (Level 1)</div>  <div class="info">Added an external repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-remote.html">git-remote</a> add.</div></li>
 <li><div class="title">Apprentice Merchant (Level 2)</div>  <div class="info">Added an external repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-remote.html">git-remote</a> add.</div></li>
@@ -65,41 +66,41 @@ Unlocked       19/      50 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-24262 rev-parse
-23808 symbolic-ref
- 631 status
- 407 push
+26146 rev-parse
+25601 symbolic-ref
+ 675 status
+ 459 push
+ 221 up
  215 Mer
- 196 diff
- 186 up
- 150 add
- 144 stash
- 140 Ven
+ 212 diff
+ 190 stash
+ 172 add
+ 146 Ven
  115 pull
- 101 Jeu
-  87 Sam
-  85 Lun
+ 110 Jeu
+ 106 Lun
+  91 Sam
+  74 Mar
   71 remote
-  69 Mar
-  67 st
+  70 st
   54 checkout
   31 config
+  26 co
+  26 Dim
   25 rm
-  23 co
   22 submodule
   21 rebase
-  15 fetch
+  17 fetch
   15 clone
   15 branches
   14 commit
-  13 Dim
   12 pul
   10 init
    8 ls-files
+   8 branch
+   7 ci
    6 merge
    6 instaweb
-   6 ci
-   6 branch
    6 achievements
    4 chore
    3 log
@@ -107,18 +108,20 @@ Git commands sorted by usage:
    3 blame
    2 tag
    2 reflog
+   2 help
    2 gc
    2 changelog
+   2 bisect
    1 undo
    1 summary
    1 revert
    1 reset
    1 prune
    1 ignore
-   1 help
    1 glog
    1 feature
    1 count
+   1 cherry-pick
    1 bug
 </pre>
 <script type="text/javascript">
@@ -146,7 +149,6 @@ There are       50 Achievements. Some achievements can be leveled up depending o
 <li><div class="title">Gipsy</div><div class="info">Create, list, delete a tag signed with GPG using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-tag.html">git-tag</a></div></li>
 <li><div class="title">Goldsmith</div><div class="info">Reviewed patches before committing with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-diff.html">git-diff</a> --cached.</div></li>
 <li><div class="title">Homeowner</div><div class="info">Set global email address using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-config.html">git-config</a>.</div></li>
-<li><div class="title">Hunter</div><div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-bisect.html">git-bisect</a> to perform a binary search to find which change introduced a bug.</div></li>
 <li><div class="title">Inventor ($1)</div><div class="info">Used a command that isn't part of the built in Git command</div></li>
 <li><div class="title">Librarian</div><div class="info">Looked for change that introduce or remove a string with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a> -S</div></li>
 <li><div class="title">Locksmith</div><div class="info">Add Signed-off-by line at the end of the commit log message using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a> -s.</div></li>
